--- a/src/less/teams.css
+++ b/src/less/teams.css
@@ -1,6 +1,5 @@
 li.member-thumbnail { text-align: center; }
 li.member-thumbnail .member-thumbnail-actions { text-align: right; }
-.table td.center-height { vertical-align: middle;}
 td.teams-activity-cell {
   text-overflow: ellipsis;
   max-width: 869px;
